--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,11 +1,5 @@
-$mainBlue: #2f5572;
-
-body {
-  color: $mainBlue;
-  margin: 10px;
-  columns: 300px 2;
-  h1 {
-    font-size: 30px;
-  }
-}
- 
+@import 'normalize.css';
+@import 'base/_global';
+@import 'base/_variables';
+@import 'modules/_large-hero';
+@import 'modules/_btn';
